temp.txt
   Compiling QTSim v0.1.0 (/mnt/c/Lorenzo/Sviluppo/UNIPD/QTSim)
error[E0277]: `dyn Fn(u64) -> Box<dyn StochasticSystem<Matrix<..., ..., ..., ...>>>` cannot be shared between threads safely
   --> src/examples/parallel.rs:162:21
    |
162 |               s.spawn(|s| {
    |  _______________-----_^
    | |               |
    | |               required by a bound introduced by this call
163 | |                 let mut avgv = vec![0.; num_steps + 1];
164 | |                 for i in 0..num_tries {
165 | |                     let x0 = state_gen(Some(i));
...   |
183 | |                 *reference = time_average(&avgv, num_tries * num_inner_tries);
184 | |             });
    | |_____________^ `dyn Fn(u64) -> Box<dyn StochasticSystem<Matrix<..., ..., ..., ...>>>` cannot be shared between threads safely
    |
    = help: the trait `Sync` is not implemented for `dyn Fn(u64) -> Box<dyn StochasticSystem<Matrix<..., ..., ..., ...>>>`
    = note: required for `Unique<dyn Fn(u64) -> Box<dyn StochasticSystem<...>>>` to implement `Sync`
note: required because it appears within the type `Box<dyn Fn(u64) -> Box<dyn StochasticSystem<...>>>`
   --> /home/lore/.rustup/toolchains/stable-x86_64-unknown-linux-gnu/lib/rustlib/src/rust/library/alloc/src/boxed.rs:231:12
    |
231 | pub struct Box<
    |            ^^^
    = note: required for `&Box<dyn Fn(u64) -> Box<dyn StochasticSystem<...>>>` to implement `Send`
note: required because it's used within this closure
   --> src/examples/parallel.rs:162:21
    |
162 |             s.spawn(|s| {
    |                     ^^^
note: required by a bound in `rayon::Scope::<'scope>::spawn`
   --> /home/lore/.cargo/registry/src/index.crates.io-1949cf8c6b5b557f/rayon-core-1.12.1/src/scope/mod.rs:520:40
    |
518 |     pub fn spawn<BODY>(&self, body: BODY)
    |            ----- required by a bound in this associated function
519 |     where
520 |         BODY: FnOnce(&Scope<'scope>) + Send + 'scope,
    |                                        ^^^^ required by this bound in `Scope::<'scope>::spawn`
    = note: the full name for the type has been written to '/mnt/c/Lorenzo/Sviluppo/UNIPD/QTSim/target/release/deps/QTSim-a0275c164e0445f2.long-type-3548225634406701079.txt'
    = note: consider using `--verbose` to print the full type name to the console

error[E0277]: `dyn Fn(u64) -> Box<dyn StochasticSystem<Matrix<..., ..., ..., ...>>>` cannot be sent between threads safely
   --> src/examples/parallel.rs:158:18
    |
158 |       rayon::scope(|s| {
    |  _____------------_^
    | |     |
    | |     required by a bound introduced by this call
159 | |         for l in 0..7 {
160 | |             let system = systems[l].take().unwrap();
161 | |             let reference = references[l].take().unwrap();
...   |
186 | |     });
    | |_____^ `dyn Fn(u64) -> Box<dyn StochasticSystem<Matrix<..., ..., ..., ...>>>` cannot be sent between threads safely
    |
    = help: the trait `Send` is not implemented for `dyn Fn(u64) -> Box<dyn StochasticSystem<Matrix<..., ..., ..., ...>>>`
    = note: required for `Unique<dyn Fn(u64) -> Box<dyn StochasticSystem<...>>>` to implement `Send`
note: required because it appears within the type `Box<dyn Fn(u64) -> Box<dyn StochasticSystem<...>>>`
   --> /home/lore/.rustup/toolchains/stable-x86_64-unknown-linux-gnu/lib/rustlib/src/rust/library/alloc/src/boxed.rs:231:12
    |
231 | pub struct Box<
    |            ^^^
note: required because it appears within the type `Option<Box<dyn Fn(u64) -> Box<dyn StochasticSystem<...>>>>`
   --> /home/lore/.rustup/toolchains/stable-x86_64-unknown-linux-gnu/lib/rustlib/src/rust/library/core/src/option.rs:593:10
    |
593 | pub enum Option<T> {
    |          ^^^^^^
note: required because it appears within the type `PhantomData<Option<Box<dyn Fn(u64) -> Box<...>>>>`
   --> /home/lore/.rustup/toolchains/stable-x86_64-unknown-linux-gnu/lib/rustlib/src/rust/library/core/src/marker.rs:823:12
    |
823 | pub struct PhantomData<T: PointeeSized>;
    |            ^^^^^^^^^^^
note: required because it appears within the type `RawVec<Option<Box<dyn Fn(u64) -> Box<dyn StochasticSystem<...>>>>>`
   --> /home/lore/.rustup/toolchains/stable-x86_64-unknown-linux-gnu/lib/rustlib/src/rust/library/alloc/src/raw_vec/mod.rs:74:19
    |
 74 | pub(crate) struct RawVec<T, A: Allocator = Global> {
    |                   ^^^^^^
note: required because it appears within the type `Vec<Option<Box<dyn Fn(u64) -> Box<dyn StochasticSystem<...>>>>>`
   --> /home/lore/.rustup/toolchains/stable-x86_64-unknown-linux-gnu/lib/rustlib/src/rust/library/alloc/src/vec/mod.rs:414:12
    |
414 | pub struct Vec<T, #[unstable(feature = "allocator_api", issue = "32838")] A: Allocator = Global> {
    |            ^^^
    = note: required because it appears within the type `&mut Vec<Option<Box<dyn Fn(u64) -> Box<dyn StochasticSystem<...>>>>>`
note: required because it's used within this closure
   --> src/examples/parallel.rs:158:18
    |
158 |     rayon::scope(|s| {
    |                  ^^^
note: required by a bound in `rayon::scope`
   --> /home/lore/.cargo/registry/src/index.crates.io-1949cf8c6b5b557f/rayon-core-1.12.1/src/scope/mod.rs:286:39
    |
284 | pub fn scope<'scope, OP, R>(op: OP) -> R
    |        ----- required by a bound in this function
285 | where
286 |     OP: FnOnce(&Scope<'scope>) -> R + Send,
    |                                       ^^^^ required by this bound in `scope`
    = note: the full name for the type has been written to '/mnt/c/Lorenzo/Sviluppo/UNIPD/QTSim/target/release/deps/QTSim-a0275c164e0445f2.long-type-10787961613785550377.txt'
    = note: consider using `--verbose` to print the full type name to the console

error[E0599]: no method named `deref_mut` found for mutable reference `&mut Box<(dyn StochasticSystem<V> + 'static)>` in the current scope
   --> src/solver.rs:179:14
    |
179 |         self.deref_mut().system(t, dt, x, dx, dw)
    |              ^^^^^^^^^
    |
    = help: items from traits can only be used if the trait is in scope
help: trait `DerefMut` which provides `deref_mut` is implemented but not in scope; perhaps you want to import it
    |
  1 + use std::ops::DerefMut;
    |
help: there is a method `deref` with a similar name
    |
179 -         self.deref_mut().system(t, dt, x, dx, dw)
179 +         self.deref().system(t, dt, x, dx, dw)
    |

error[E0599]: no method named `deref_mut` found for mutable reference `&mut Box<(dyn StochasticSystem<V> + 'static)>` in the current scope
   --> src/solver.rs:182:14
    |
182 |         self.deref_mut().generate_noises(dt, dw)
    |              ^^^^^^^^^
    |
    = help: items from traits can only be used if the trait is in scope
help: trait `DerefMut` which provides `deref_mut` is implemented but not in scope; perhaps you want to import it
    |
  1 + use std::ops::DerefMut;
    |
help: there is a method `deref` with a similar name
    |
182 -         self.deref_mut().generate_noises(dt, dw)
182 +         self.deref().generate_noises(dt, dw)
    |

error[E0599]: no method named `deref` found for reference `&Box<(dyn StochasticSystem<V> + 'static)>` in the current scope
   --> src/solver.rs:185:14
    |
185 |         self.deref().measurement(x, dt, dw)
    |              ^^^^^
    |
    = help: items from traits can only be used if the trait is in scope
help: trait `Deref` which provides `deref` is implemented but not in scope; perhaps you want to import it
    |
  1 + use std::ops::Deref;
    |
help: there is a method `deref_mut` with a similar name
    |
185 |         self.deref_mut().measurement(x, dt, dw)
    |                   ++++

Some errors have detailed explanations: E0277, E0599.
For more information about an error, try `rustc --explain E0277`.
error: could not compile `QTSim` (bin "QTSim") due to 5 previous errors
